# ros_nodes

./: .gitmodules  CMakeLists.txt  README.md  detection_node.py  estimator_node.py  main.py  mapping_node.py  package.xml  utils.py
configs/: test.json  testDetection.json  testParticleFilter.json
launch/: gazebo_test.launch  stage_empty.launch  stage_maze.launch  stage_test.launch
src/ros_nodes/: .estimator_node.py.swp  .policy_node.py.swp  detection_node.py  policy_node.py
stage/: empty.world  maze.world
tests/: test_detectors.py  test_utils.py
tests/configs/: test.cfg  test.json
tests/data/: ranges.json  ranges2.json
