<?xml version="1.0"?>
<package>
  <name>ros_nodes</name>
  <version>1.0.0</version>
  <description>This package provides ros interfaces</description>

  <maintainer email="chris.smalley.32@gmail.com">Chris Smalley</maintainer>

  <license>BSD</license>

  <url type="repository"></url>
  <url type="bugtracker"></url>

  <author email="chris.smalley.32@gmail.com">Chris Smalley</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>stage_ros</run_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
